--- a/cs153_hw2.md
+++ b/cs153_hw2.md
@@ -4,25 +4,27 @@ Yidi Wang <br>
 
 ## Problem I
 a. 
-<!---
 ```
 int num = 0;
+Semophore mutex(1);
 
-main() {
+void main() {
     while(num < n) {    // n is the total number of people
         int sock = new_person();
         thread_fork(handler, sock);
     }
 }
 
-counter(int sock) {
+void counter(int sock) {
+    mutex.wait();
     if (sock > 0)   // there is a person arrives
         num++;
+    mutex.signal();
     close(sock);
 }
 ```
--->
 
+<!---
 ```
 int num = 0;
 int total = N;
@@ -39,7 +41,7 @@ void counter() {
         restaurant.signal();
 }
 ```
-
+-->
 b. 
 <!---
 ```
@@ -79,24 +81,33 @@ int num_icing = 0;
 Semaphore mix(0);
 Semaphore filling(0);
 Semaphore icing(0);
+Semophore mutex1(1);
+Semophore mutex2(1);
+Semophore mutex3(1);
 
 void mixReady() {
+    mutex1.wait();
     num_mix++;
+    mutex1.signal();
     mix.signal();
     icing.wait();
 }
 
 void fillingReady() {
     mix.wait();
+    mutex1.wait();
     num_filling++;
+    mutex2.signal();
     filling.signal();
 }
 
 void icingReady() {
     mix.wait();
     filling.wait();
+    mutex3.wait();
     num_icing++;
     MakeCake();
+    mutex3.signal();
     icing.signal();
 }
 
@@ -141,9 +152,14 @@ int num_icing = 0;
 Semaphore mix(0);
 Semaphore filling(0);
 Semaphore icing(0);
+Semophore mutex1(1);
+Semophore mutex2(1);
+Semophore mutex3(1);
 
 void mixReady() {
+    mutex1.wait();
     num_mix++;
+    mutex1.signal();
     if (num_mix % 2 == 0)
         mix.signal();
     icing.wait();
@@ -151,17 +167,20 @@ void mixReady() {
 
 void fillingReady() {
     mix.wait();
-    mix.wait();
+    mutex2.wait();
     num_filling++;
+    mutex2.signal();
     filling.signal();
 }
 
 void icingReady() {
     mix.wait();
-    mix.wait();
     filling.wait();
+    mutex3.wait();
     num_icing++;
     MakeCake();
+    mutex3.signal();
+    icing.signal();
     icing.signal();
 }
 
@@ -191,5 +210,35 @@ Yes, this is deadlock.
 a. We can use Banker's Algorithm to simulate.
 1. A car can go into the intersection only if the next intersection is also available. If not, switch the traffic light to red.
 2. After 5 cars passed one intersection, switch the traffic light, and lock that direction and let the cars from the other direction pass.
+
+```
+int num = 0;
+Semophore intersection(5);
+Semophore light(0);
+Semophore mutex(1);
+
+void car() {                // thread for one car at one intersection
+    intersection.wait();
+    mutex.wait();
+    go_into_intersection();
+    num++;
+    mutex.signal();
+    if (num >= 5) {
+        clear(num);
+        light.signal();
+    }
+}
+
+
+void switchTrafficLight() {       // thread for one traffic light's decision
+    light.wait();
+    switch_traffic_light();
+    intersection.signal();
+    intersection.signal();
+    intersection.signal();
+    intersection.signal();
+    intersection.signal();
+}
+```
 
 b. We can add preemption to the above mechanism. When there comes an emergency car in a direction, the other cars in that direction should stop immediately, and the emergency car would have the highest priority to the intersection.
