--- a/cs218/hw5/hw5.tex
+++ b/cs218/hw5/hw5.tex
@@ -68,6 +68,9 @@ and have maximum length. Justify its correctness.  State and justify its time an
 \noindent\emph{Hint: Similar to LIS.}
 \end{problem}
 
+\paragraph{Answer:}\mbox{} \\
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
