--- a/cs235/report/hw4.tex
+++ b/cs235/report/hw4.tex
@@ -53,7 +53,7 @@ A = sparse(edgelist(:,1), edgelist(:,2), 1);
 
 \noindent
 \textbf{Part 2, 3} \\
-There are mainly two dense blocks are annotated by red circles.
+There are mainly three dense blocks are annotated by red circles.
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.56]{figs/q1.jpg}
@@ -89,7 +89,7 @@ Yes. In the clean degree distribution figure, the majority of the nodes have a s
 
 \noindent
 \textbf{Part 4} \\
-(a). There are mainly twoe abnormal blocks. They are annotated in red circles. Above the $10^2$ on the y axis in the above figure (when degree is big enough), there are two (near-)horizontal lines, which means that there are many consecutive nodes having similar degrees. This will cause dense blocks in the sparse matrix.c \\
+(a). There are mainly three abnormal blocks. They are annotated in red circles. Above the $10^2$ on the y axis in the above figure (when degree is big enough), there are three crowded area in the distribution and they are higher then the previous degrees, which means that there are many consecutive nodes having similar degrees. This will cause dense blocks in the sparse matrix. \\
 \noindent
 (b). The lower left thick line in Fig.\ref{fig::deg_log} is corresponding to the lowest right dense block in Fig.\ref{fig::spy}. And the upper right thick line in Fig.\ref{fig::deg_log} is corresponding to the upper left block in Fig.\ref{fig::spy}.
 
@@ -138,14 +138,14 @@ $$
 
 \noindent
 (c).
-Any abnormal block in the spy-plot is a (near-)clique or a (near-)bipartite in the graph. In the paper, they proved that when they increase the number of communities, the spoke pattern on the EE-plot will become more clear. In the abpve left singular value plot, we have two long spokes, which are corresponding to the two dense blocks in the spy-plot in \ref{fig::spy}.
+Any abnormal block in the spy-plot is a (near-)clique or a (near-)bipartite in the graph. In the paper, they proved that when they increase the number of communities, the spoke pattern on the EE-plot will become more clear. In the abpve left singular value plot, we have three long spokes, as well as the rest spoke, which are corresponding to the three dense blocks in the spy-plot in \ref{fig::spy}.
 
 \noindent
 (d).
 \begin{figure}[H]
     \centering
     \includegraphics[width=\linewidth]{figs/q3_d.jpg}
-    \caption{Left singular vectors}
+    \caption{Top 100 nodes of each singular vector}
     \label{fig::sub}
 \end{figure}
 
