--- a/cs235/report/hw4.tex
+++ b/cs235/report/hw4.tex
@@ -85,7 +85,7 @@ end
 
 \noindent
 \textbf{Part 3} \\
-Yes. In the clean degree distribution figure, the majority of the nodes have a small degree. While the degree becomes larger, the number of corresponding nodes become less and less. Degree and node counts are negtively correlated. However, in this distribution, node count is increasing while the degree increase. They are positively correlated.
+Yes. In the clean degree distribution figure, the majority of the nodes have a small degree. While the degree becomes larger, the number of corresponding nodes become less and less. Degree and node counts are negtively correlated. However, in this distribution, some of the node count is increasing while the degree increase. They are positively correlated.
 
 \noindent
 \textbf{Part 4} \\
