--- a/ee232/hw4/latex/hw4.tex
+++ b/ee232/hw4/latex/hw4.tex
@@ -238,7 +238,8 @@ cvx_end
 \noindent
 Optimal price: \$2187   \\
 PAR (controllable) in this case: 1.3172    \\
-PAR (total) in this case: 2.4978
+PAR (total) in this case: 2.4978    \\ 
+This is not desirable. PAR is far from 1, which means that the load is not stable.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -305,7 +306,7 @@ PAR (total) in this case: 1
 \textbf{Part a, b} \\
 \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.6]{figs/q5_a.jpg}
+    \includegraphics[scale=0.5]{figs/q5_a.jpg}
     \caption{Indoor temperature and power consumption}
     \label{fig::q5a}
 \end{figure}
@@ -316,21 +317,12 @@ Total energy usage: 9.1667 kWh
 \textbf{Part c} \\
 \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.6]{figs/q5_c1.jpg}
-    \caption{Indoor temperature and power consumption at $x_0 = 23$ }
-    \label{fig::q5c1}
+    \includegraphics[scale=0.5]{figs/q5_c.jpg}
+    \caption{Indoor temperature and power consumption}
+    \label{fig::q5c}
 \end{figure}
 
-Total energy usage: 8.8333 kWh
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[scale=0.6]{figs/q5_c2.jpg}
-    \caption{Indoor temperature and power consumption at $x_0 = 27$ }
-    \label{fig::q5c2}
-\end{figure}
-
-Total energy usage: 9.6667 kWh
+Total energy usage: 10 kWh
 
 \end{document}
 
